# calculator-app

./: .gitignore  README.md  package.json  render.yaml  vercel.json
backend/: pyproject.toml
backend/app/: health.py  main.py
backend/app/auth/: __init__.py  schemas.py  service.py  utils.py
backend/app/calculator/: __init__.py  schemas.py  service.py
backend/app/user/: __init__.py  service.py
backend/db/: models.py
backend/db/config/: constants.py  database.py
backend/tests/: conftest.py  test_auth.py  test_calculator.py  test_health.py  test_user.py
frontend/: jest.config.ts  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/__tests__/: Calculator.test.tsx  Sidebar.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/(pages)/: layout.tsx
frontend/app/(pages)/user/profile/: page.tsx
frontend/app/(pages)/user/signin/: page.tsx
frontend/app/(pages)/user/signup/: page.tsx
frontend/components/: Calculator.tsx  Sidebar.tsx
frontend/e2e/: auth.spec.ts  calculator-edge-cases.spec.ts  calculator-flow.spec.ts  calculator.spec.ts  integration.spec.ts
frontend/lib/: api.ts
