[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pytest>=9.0.3",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
]
[tool.fastapi]
entrypoint = "app.main:app"
